
X4 Datapath Restrictions
------------------------

- The Wire Order API (WODA) is only guaranteed to operate correctly where
  only the Enterprise RX path is selected (EF_MULTIARCH_RX_DATAPATH=ff)

A placeholder to outline the application clustering support in X4.
(SO_REUSEPORT is only supported with EF_MULTIARCH_RX_DATAPATH=ff,
i.e. the "Enterprise" datapath in X4. FIXME: ON-16338.)


ef_vi Compatibility
-------------------

The ef_vi interface is still under development. As such there are no binary
compatibility guarantees either backwards or forwards.


X2 Rx Timestamping with very old firmware versions
--------------------------------------------------

A workaround for handling v7.1 firmware on X2 has been removed, which would
lead to inaccurate timestamps if that firmware was in use. Anyone using this
outdated firmware should update to a supported version.


Onload-9.0.1.86
===============

 This is an update release of Onload to fix various bugs in
 OpenOnload-9.0.0.39, add a new version of the sfc net driver,
 simplify packaging, and update the supported operating system list.

 Please see the ChangeLog for a full list of changes.


Linux distribution support
--------------------------

 This package can be installed on:
 - Red Hat Enterprise Linux 8.6 - 8.10
 - Red Hat Enterprise Linux 9.2 - 9.5
 - Canonical Ubuntu Server LTS 22.04 and 24.04
 - Debian 12 "Bookworm"
 - Linux kernels 5.11 - 6.12


Additional packaging options
----------------------------

 - Akmods RPM sub-package as alternative to DKMS

   Red Hat Akmods is a system which, like DKMS, builds kernel modules
   on-demand. Unlike DKMS, it is integrated into the Red Hat ecosystem.
   It uses `rpmbuild` to build `onload-kmod-$(uname -r)` RPMs which it installs
   with `yum`/`dnf`. It will only build for kernel versions which are missing
   the `/lib/modules/*/extra/onload/` (package name) directory. As with the
   `dkms` RPM, the `akmods` RPM is available in EPEL. To use:
